[package]
name = "lenz-decoder"
version = "0.1.1"
edition = "2024"
authors = ["Ava Wolfe <ava.codie.wolfe@gmail.com>"]
description = "A no-std Rust crate for decoding Lenz (pre-DCC) protocol"
license = "MIT"
repository = "https://github.com/slonket/lenz-decoder"
readme = "README.md"
keywords = ["marklin", "lenz", "decoder", "no-std", "embedded"]
categories = ["no-std", "embedded", "hardware-support"]